<resources>
    <string name="app_name" translatable="false">"BeFit "</string>

    <!--Scan Activity-->
    <string name="stop_scan">Stop</string>
    <string name="start_scan">Scan</string>
    <string name="request_activate_bluetooth">Please turn on bluetooth</string>

    <string name="calorie_ab" translatable="false">Cal</string>
    <string name="kilometer_ab" translatable="false">km</string>
    <string name="distance_mean">Distance average</string>
    <string name="steps_mean">Steps average</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="error_take_photo">Error taking a photo</string>
    <string name="empty_scan_data">No data available</string>
    <string name="your_daily_info">Daily info</string>
    <string name="steps_daily_title">Steps today:</string>
    <string name="distance_daily_title">Distance traveled today:</string>
    <string name="calorie_daily_title">Calories:</string>
    <string name="age">Age</string>
    <string name="introduce_age">Enter your age</string>
    <string name="introduce_weight">Enter your Weight</string>
    <string name="introduce_steps_goal">Steps goal</string>
    <string name="introduce_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="introduce_steps_goal_error">Enter steps goal</string>
    <string name="welcome">Welcome</string>
    <string name="introduce_height">Enter your height</string>
    <string name="steps_evolution">Steps evolution</string>
    <string name="general_information">General information</string>
    <string name="weight_evolution">Weight evolution</string>
    <string name="steps">Steps</string>
    <string name="general">General</string>
    <string name="title_activity_smart_band_pager" translatable="false">SmartBandPagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="heart_rate">Heart rate</string>
    <string name="heart_rate_evolution">Heart rate evolution</string>
    <string name="profile">Profile</string>
    <string name="distance_evolution">Distance</string>
    <string name="Distance">Distance</string>
    <string name="download_data">Download data</string>
    <string name="my_history">My personal data</string>
    <string name="my_daily_info">My daily info</string>
    <string name="value">Value</string>
    <string name="date">Date</string>
</resources>
