<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/profile_default"
        app:civ_border_color="@color/black"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personal_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintCircle="@id/profile_image"
        app:layout_constraintCircleRadius="90dp"
        app:layout_constraintCircleAngle="60"
        android:padding="2dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/personal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        app:layout_constraintCircle="@id/profile_image"
        app:layout_constraintCircleRadius="90dp"
        app:layout_constraintCircleAngle="120"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/personal_distance_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_mean"
        app:layout_constraintCircle="@id/profile_image"
        app:layout_constraintCircleRadius="90dp"
        app:layout_constraintCircleAngle="240"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/personal_steps_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_mean"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintCircle="@id/profile_image"
        app:layout_constraintCircleRadius="90dp"
        app:layout_constraintCircleAngle="300"/>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/cubic_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>